# paper-longline-ais-sar-matching

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
01_Acquisitions/indian/: ksat-detections-ind-v20200110.csv  walmart-ksat-detections-ind-v20200110.csv
01_Acquisitions/pacific/: README.txt  walmart-ksat-detections-fp-v20200117.csv  walmart-ksat-detections-ind-v20200110.csv
02_Evaluation_of_Fishing_Activity/: Regional_Analysis.py
03_Vessel_Review/Gear_review/: review_gear.py  (+2 more)
04_Probability_Raster_Generation/: readme.txt
05_SAR_AIS_Matching/: 02_score_detections.sql.j2  02_score_detections_multiplied.sql.j2  04_match_detections.sql.j2  create_master_table.py  ksat_matching_v20210426.yaml  match_sar_scenes_to_AIS_VMS_v20210421.py  probs_multiplied.sql.j2  sat_positions.py
06_Evaluating_Matching/: EvaluateMatchingSystems.py  location_probability_rasters_figure.py  matching_rate_of_gear.py
07_Dark_Vessel_Estimates/: DarkVesselsEstimates.py  all_detections_and_vessels.csv  samples10000_2.5e-05.pickle
08_Area_of_Ocean_to_be_Monitored/: scenes_to_image_longline_activity.py
2_Evaluation_of_Fishing_Activity/: Regional_Analysis.py
5_SAR_AIS_Matching/: 01_extrapolate_ais.sql.j2  02_score_combine_mult_ave.sql.j2  02_score_detections_dist.sql.j2  02_score_detections_multiplied.sql.j2  03_rank_detections.sql.j2  create_master_table.py
6_Evaluating_Matching/: EvaluateMatchingSystems.py  location_probability_rasters_figure.py  matching_rate_of_gear.py
7_Dark_Vessel_Estimates/: DarkVesselsEstimates.py  samples1000_2.5e-05.pickle
8_Area_of_Ocean_to_be_Monitored/: scenes_to_image_longline_activity.py
ais_sar_matching/: sar_analysis.py
notebooks/: hello_notebook.py
research_python_template/: __init__.py  config.py  hello.py
scratch_david/: likelihood_in_scene.py  likelihood_in_scene_v2.py  likelihood_in_scene_v3.py
(+118 files in other folders)
