[metadata]
name = research_python_template
version = 0.1.0
author = Jenn Van Osdel
author_email = jenn@globalfishingwatch.org
description = A python template repo for the Research and Innovation team at Global Fishing Watch.
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlobalFishingWatch/research-python-template
project_urls =
    Bug Tracker = https://github.com/GlobalFishingWatch/research-python-template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
package_data =
python_requires = >=3.8
install_requires =
    # pandas
    # google-cloud-bigquery
    black
    flake8
    isort
    pre-commit

[options.extras_require]
nb =
    jupyter
    jupytext
