[metadata]
name = ais_sar_matching
version = 0.1.0
author = David Kroodsma
author_email = david@globalfishingwatch.org
description = Repo for the Revealing the Global Longline Fleet with SAR paper.
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlobalFishingWatch/ais-sar-matching
project_urls =
    Bug Tracker = https://github.com/GlobalFishingWatch/ais-sar-matching/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
package_data =
python_requires = >=3.8
install_requires =
    # pandas
    # google-cloud-bigquery
    black
    flake8
    isort
    pre-commit

[options.extras_require]
nb =
    jupyter
    jupytext
